implemented proper login, register, & logout buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,14 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
+    <% if user_signed_in? %>
+     <%= button_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <br>
+      <%= link_to "Register Account",new_user_registration_path %>
+      <br><br>
+      <%= link_to "Login Existing Account", new_user_session_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
