initial pubnub setup

--- a/app/views/static_page/_admin_dashboard.html.erb
+++ b/app/views/static_page/_admin_dashboard.html.erb
@@ -15,7 +15,7 @@
                 ><%= user.name %>
             </td>
             <td style="border: 1px solid black; width: 150px;">
-                Set Support Staff
+                <%= link_to "chat now", chat_chat_page_path%>
             </td>
         </tr>
     <% end %>
