--- a/app/views/static_page/_admin_dashboard.html.erb
+++ b/app/views/static_page/_admin_dashboard.html.erb
@@ -4,17 +4,17 @@
 <h3>Admin Dashboard:</h3>
 <small>Assign users to specific chat staff:</small>
 
-<table style='border: 2px solid black; text-align:center; margin: 25px;'>
+<table class='table table-striped table-bordered text-center'>
     <tr>
-        <td style="border: 1px solid black; width: 150px;" >User Name</td>
-        <td style="border: 1px solid black; width: 150px;" >Action</td>
+        <td><strong>User Name</strong></td>
+        <td><strong>Action</strong></td>
     </tr>
     <% User.where("account_types = 1").each do |user| %>
         <tr>
-            <td style="border: 1px solid black; width: 150px;"
+            <td
                 ><%= user.name %>
             </td>
-            <td style="border: 1px solid black; width: 150px;">
+            <td>
                 <%= link_to "chat now", chat_chat_page_path%>
             </td>
         </tr>
