--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "<- Dashboard", root_path %>
+<%= <%= link_to "<- Dashboard", root_path, class:'btn btn-info text-white' %> root_path %>
 <br><br>
 <script src="//cdn.pubnub.com/pubnub.min.js"></script>
 
