--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h2 style='text-align: center;'>All Users</h2>
-<%= link_to "<- Dashboard", root_path%>
+<%= <%= link_to "<- Dashboard", root_path, class:'btn btn-info text-white' %> root_path%>
 <table style='border: 2px solid black; text-align: center;'>
     <tr>
         <td style="border: 1px solid black; width: 150px;"><strong>User Name</strong></td>
