--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Edit User", edit_user_registration_path %>
     <% if current_user.account_types == "admin" %>
         <%= render "/static_page/admin_dashboard" %>
-    <% elsif current_user.account_types == "suppoert" %>
+    <% elsif current_user.account_types == "support" %>
         <%= render "/static_page/support_dashboard" %>
     <% elsif current_user.account_types == "user" %>
         <%= render "/static_page/user_dashboard" %>
