--- a/app/views/static_page/_user_dashboard.html.erb
+++ b/app/views/static_page/_user_dashboard.html.erb
@@ -17,7 +17,7 @@
             <%= chat.chat_title %>
             </td>
             <td>
-                <%= link_to "chat now", "" %>
+                <%= link_to "chat now", chat_path(chat) %>
             </td>
         </tr>
     <% end %>
