fetched chat history and inserted to chatbox/chatbody

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -7,7 +7,7 @@
 <div id="current_user" style='display: none;'><%= current_user.name %></div>
 
 <div class="alert alert-info">You are <strong id="whoami"></strong></div>
-<div class="row">
+<div class="row mb-5">
   <div class="col-3">
     <div class="card">
       <div class="card-header">Online Users</div>
