--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,7 @@
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-      <% if user_signed_in? %>
-          <%= button_to "Logout", destroy_user_session_path, method: :delete%>
-      <% end %>
+      <%= render 'layouts/header' %>
       <%= yield %>
     </div>
   </body>
