--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,6 +1,4 @@
 <% if user_signed_in? %>
-    <h5 style="text-align: center;">Welcome, <%= current_user.name %>!</h5>
-    <%= link_to "Edit User", edit_user_registration_path %>
     <% if current_user.account_types == "admin" %>
         <%= render "/static_page/admin_dashboard" %>
     <% elsif current_user.account_types == "support" %>
@@ -9,11 +7,12 @@
         <%= render "/static_page/user_dashboard" %>
     <% end %>
 <% else %>
-    <div  style="text-align: center;">
-        <h2>Welcome to Sup<strike>Hub</strike></h2>
-        <br>
-        <%= link_to "Register Account",new_user_registration_path %>
-        <br><br>
-        <%= link_to "Login Existing Account", new_user_session_path %>
+    <div class='text-center bg-secondary text-white p-5'>
+        <h2 class='mb-5'>Welcome to Sup<strike>Hub</strike></h2>
+        <hr>
+        <div class="d-flex justify-content-around mt-5">
+            <%= link_to "Register Account",new_user_registration_path, class: 'btn btn-success' %>
+            <%= link_to "Login Existing Account", new_user_session_path, class: 'btn btn-info text-white' %>
+        </div>
     </div>
 <% end %>
